# hyperion-fuzzy

./: .coveragerc  .gitignore  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  Untitled.ipynb  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
src/hyperion_fuzzy/: CMakeLists.txt  HyperionFuzzy.py  __init__.py  classifier.py  main.py  skeleton.py  wrappers.py
src/hyperion_fuzzy/cpp/: Makefile  distance.cpp  fuzzy_contribution.cpp  hypersphere.cpp  hypersphere.h  optimize_hypersphere.cpp  test.cpp
src/hyperion_fuzzy/include/: fuzzy_contribution.h  hypersphere.h  optimize_hypersphere.h
src/hyperion_fuzzy/pybind/: fuzzy_bindings.cpp  hypersphere_bindings.cpp  optimize_bindings.cpp
tests/: conftest.py  test.py  test_performance.py  test_skeleton.py
